# Atlas

./: .gitignore  .infisical.json  .oxlintrc.json  README.md  biome.json  bts.jsonc  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: code-quality.yml
.husky/: pre-commit
apps/api-gateway/: .env.example  package.json
apps/api-gateway/src/: index.ts
apps/api-gateway/src/agents/: classifier.ts  duckdb-agent.ts  general-agent.ts  rag-agent.ts  router-agent.ts  sql-agent.ts
apps/api-gateway/src/config/: config.ts  logger.ts
apps/api-gateway/src/middleware/: orchestrator.ts  response-orchestrator.ts
apps/ml-services/: .gitignore  main.py  pyproject.toml
apps/server/: package.json  tsdown.config.ts
apps/server/src/: index.ts
apps/web/: package.json  tailwind.config.js
apps/web/src/: index.css
apps/workers/: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
apps/workers/src/atlas_workers/: __init__.py  config.py  lambda_handler.py  lambda_handlers.py  main.py  operations.py
apps/workers/src/atlas_workers/db/: __init__.py  connector.py  operations.py  pg.py  s3.py
apps/workers/src/atlas_workers/models/: __init__.py  argo.py
apps/workers/src/atlas_workers/utils/: __init__.py  helper.py  logging.py
apps/workers/src/atlas_workers/workers/: __init__.py  ftp_sync.py  netcdf_parser.py
apps/workers/src/atlas_workers/workers/argo_sync/: __init__.py  argo_sync.py  sync.py
apps/workers/src/atlas_workers/workers/ftp_sync/: __init__.py  ftp_batch.py  ftp_connection.py  ftp_downloader.py  ftp_navigation.py  ftp_scanner.py  ftp_sync_worker.py  http_fallback.py
apps/workers/src/atlas_workers/workers/netcdf_processor/: __init__.py  converter.py  netcdf_aggregate_parser.py  netcdf_exporters.py  netcdf_extractors.py  netcdf_parser.py  netcdf_profile_parser.py  netcdf_to_parquet_converter.py
apps/workers/tests/: test_argo_sync.py  test_ftp_sync.py  test_netcdf_parser.py
data/: 2902226_float.json  2902227_float.json
docs/: Float Analysis Report.md
docs/dev/: DATABASE_ARCHITECTURE.md  DUCK_DB_ARCHITECTURE.md  MULTI_AGENT_ARCHITECTURE.md  SQL_DB_ARCHITECTURE.md  TRPC_ARCHITECTURE.md  WORKER_ARCHITECTURE.md
terraform/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf  worker.tf
test/: README.md  bts.jsonc  package.json
test/apps/server/: package.json  tsconfig.json
test/apps/web/: next.config.ts  package.json
(+99 files in other folders)
