[project]
name = "atlas-workers"
version = "0.1.0"
description = "ARGO Float Data Processing Workers - FTP Sync & NetCDF Parser"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25.0",
    "xarray>=2023.12.0",
    "netcdf4>=1.6.4",
    "pyarrow>=13.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=23.2.0",
    "psycopg2-binary>=2.9.11",
    "cftime>=1.6.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "pyrefly>=0.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.4",
    "pyrefly>=0.40.0",
]
