[project]
name = "atlas-workers"
version = "0.1.0"
authors = [
  { name="Agasta", email="rupam.golui@proton.me" },
]
description = "ARGO Float Data Processing Workers - FTP Sync & NetCDF Parser"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "httpx>=0.25.0",
    "xarray>=2023.12.0",
    "netcdf4>=1.6.4",
    "pyarrow>=13.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "loguru>=0.7.0",
    "psycopg2-binary>=2.9.11",
    "cftime>=1.6.5",
    "boto3>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "pyrefly>=0.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.4",
    "pyrefly>=0.1.0",
    "pytest>=9.0.1",
    "ty>=0.0.1a29",
]

[tool.ty.rules]
index-out-of-bounds = "ignore"
[tool.ty.src]
exclude = ["tests"]