[project]
name = "atlas-workers"
version = "0.1.0"
authors = [
  { name="Agasta", email="rupam.golui@proton.me" },
]
description = "ARGO Float Data Processing Workers - HTTPs Sync & NetCDF Parser"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "httpx>=0.25.0",
    "pyarrow>=13.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "loguru>=0.7.0",
    "psycopg2-binary>=2.9.11",
    "boto3>=1.26.0",
    "xarray>=2025.12.0",
    "netcdf4>=1.7.3",
]

[dependency-groups]
dev = [
    "ruff>=0.14.4",
    "pytest>=9.0.1",
    "ty>=0.0.1a29",
    "deptry>=0.24.0",
]

[tool.ty.rules]
index-out-of-bounds = "ignore"
[tool.ty.src]
exclude = ["tests"]
